Day 2/main.tf
provider "aws"  {
  region = "us-east-1"
}
data "aws_vpc" "default"{
default = true
}
resource "aws_security_group" "devops_sg"{
name = "devops-sg"
description = "Security group for Nautilus App Servers"	
vpc_id = data.aws_vpc.default.id
ingress{
description = "Allow HTTP"
from_port = 80
to_port = 80
protocol = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}
ingress{
description = "Allow SSH"
from_port = 22
to_port = 22
protocol = "tcp"
cidr_blocks = ["0.0.0.0/0"]
}
egress{
from_port = 0
to_port = 0
protocol = "-1"
cidr_blocks = ["0.0.0.0/0"]
}
tags = {
Name = "datacenter-sg"
}
}
